--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.6.4",
     "css-loader": "^3.4.2",
     "vue": "^2.6.11",
+    "vue-material": "^1.0.0-beta-11",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
