--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "css-loader": "^3.4.2",
     "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-11",
+    "vuejs-paginate": "^2.1.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
